# finintel

./: .env.example  .gitattributes  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
evals/: eval_set.jsonl  run.py
evals/results/: agent_v2_20260508_220705_detailed.json  agent_v2_20260508_220705_summary.json  baseline_20260508_115912_detailed.json  baseline_20260508_115912_summary.json  baseline_8b_20260508_122612_detailed.json  baseline_8b_20260508_122612_summary.json  baseline_8b_20260508_124350_detailed.json  baseline_8b_20260508_124350_summary.json  baseline_v2_20260508_213506_detailed.json  baseline_v2_20260508_213506_summary.json  rerank_20260508_122227_detailed.json  rerank_20260508_122227_summary.json  rerank_8b_20260508_123143_detailed.json  rerank_8b_20260508_123143_summary.json  rerank_8b_20260508_124946_detailed.json  rerank_8b_20260508_124946_summary.json  rerank_v2_20260508_215015_detailed.json  rerank_v2_20260508_215015_summary.json
notebooks/: 01_parsing_exploration.ipynb  02_chunking.ipynb  03_indexing.ipynb  04_rag_baseline.ipynb  05_agent_test.ipynb
scripts/: migrate_to_qdrant_cloud.py
src/finintel/agent/: generator.py  graph.py  prompts.py
src/finintel/ingestion/: parser.py  sec_client.py
src/finintel/retrieval/: chunker.py  embeddings.py  reranker.py  vectorstore.py
src/finintel/ui/: app.py
