[project]
name = "finintel"
version = "0.1.0"
description = "Agentic RAG system for analyst-grade question answering over SEC filings"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "langchain-text-splitters>=1.1.2",
    "lxml>=6.1.0",
    "openai>=2.36.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.17.1",
    "requests>=2.33.1",
    "sec-edgar-downloader>=5.1.0",
    "sentence-transformers>=5.4.1",
    "streamlit>=1.57.0",
    "tiktoken>=0.12.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/finintel"]
